<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InheritanceFragment"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inheritanceFragment1Title"
        android:textSize="30dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inheritanceFragment2Text"
        android:textSize="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <Button
        android:id="@+id/inheritanceVideoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Inheritance Video"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inheritanceFragment4ReviewQuestions"
        android:textSize="15dp"
        android:paddingTop="10dp"
        />


</LinearLayout>